--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
 
         <div>
             <a href=""><i class="logo fa-solid fa-shop fa-beat"></i></a>
-            <h3>La calaca Fina</h3>
+            <h3>ClothyShop</h3>
         </div>
 
         <div>
@@ -12,7 +12,7 @@
 
             <div class="flex">
                 <i class="fa-solid fa-brands fa-facebook"></i>
-                <a href="">LaCalacaFina</a>
+                <a href="">ClothyShop</a>
             </div>
 
             <div class="flex">
