--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -26,11 +26,7 @@
             </div>
 
             <div class="area2">
-                <div class="buscador flex">
-                    <button>
-                        <i class="fa-solid fa-magnifying-glass"></i></button>
-                    <input type="text">
-                </div>
+               <search-bar></search-bar>
             </div>
 
             <nav class="area3">
