--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,8 +1,11 @@
 /*---------Coloress---------- */
 $melon: #FB846B;
-$cream: #d2806f;
-$creamDark: #ba7567;
-$oscuro: #F9603F;
+$orange: #ee6548;
+
+$cafe: #9d5a4c;
+$cafeDark: #994838;
+$creamDark: #e77660;
+
 $blue: #211E4F;
 $gray: #F7F7F7;
 
