--- a/src/app/components/carrusel/carrusel.component.html
+++ b/src/app/components/carrusel/carrusel.component.html
@@ -1,42 +1,49 @@
+<div class="carrusel" #carruselContent>
 
-<div class="carrusel">
+    <div class="carrusel-track" [style.left.px]="leftPosition" #carruselList>
 
-    <div class="sliders" #contentSlides>
-
-        <div class="product">
-            <picture></picture>
-            <h3>Producto</h3>
-            <p>Precio: <b>$10.00</b></p>
-            <a href="" class="btn">Añadir a carrito</a>
-            <a href="" class="btn shop">Comprar</a>
-        </div>
-
-        <div class="product">
-            <picture></picture>
-            <h3>Producto</h3>
-            <p>Precio</p>
-            <a href="" class="btn">Añadir a carrito</a>
-            <a href="" class="btn shop">Comprar</a>
-        </div>
-
-        <div class="product">
-            <picture></picture>
-            <h3>Producto</h3>
-            <p>Precio</p>
-            <a href="" class="btn">Añadir a carrito</a>
-            <a href="" class="btn shop">Comprar</a>
-        </div>
-
-        <div class="product">
-            <picture></picture>
-            <h3>Producto</h3>
-            <p>Precio</p>
+        <div *ngFor="let product of products" class="product" #product>           
+            <picture>
+                <img src="{{product.category.image}}" alt="{{product.category}}">
+            </picture>
+            <h3>{{product.title}}</h3>       
+            <p>Precio: <b>${{product.price}}</b></p>
             <a href="" class="btn">Añadir a carrito</a>
             <a href="" class="btn shop">Comprar</a>
         </div>
 
     </div>
-    
+
+    <button class="carrusel-arrow carrusel-prev" (click)="moveLeft()" #prev>
+        <i class="fa-solid fa-chevron-left"></i>
+    </button>
+
+    <button class="carrusel-arrow carrusel-next" (click)="moveRight()" #next>
+        <i class="fa-solid fa-chevron-right"></i>
+    </button>
+
+    <ul class="puntos">
+        <li class="punto" (click)="selectPoints()" #punto></li>
+        <li class="punto" (click)="selectPoints()" #punto></li>
+        <li class="punto" (click)="selectPoints()" #punto></li>
+    </ul>
+
+</div>
+
+<div class="carrusel" #carruselContent>
+
+    <div class="carrusel-track" [style.left.px]="leftPosition" #carruselList>
+
+        <div *ngFor="let category of categories" class="product" #product>           
+            <picture>
+                <img src="{{category.image}}" alt="{{category.image}}">
+            </picture>
+            <h3>{{category.name}}</h3>         
+            <a href="" class="btn shop">Ver Más</a>
+        </div>
+
+    </div>
+
     <button class="carrusel-arrow carrusel-prev" (click)="moveLeft()" #prev>
         <i class="fa-solid fa-chevron-left"></i>
     </button>
