--- a/src/app/components/carrusel/carrusel.component.scss
+++ b/src/app/components/carrusel/carrusel.component.scss
@@ -10,9 +10,17 @@
     width: 90%;
 }
 
-.sliders {
+.carrusel-track {
+    top: 0;
+    left: 0;
+    float: left;
+    position: relative;
     @include m.flex(flex-start);
+    transition: all 1s ease-in-out;
 }
+
+
+/************************************************/
 
 .punto,
 .carrusel-arrow {
@@ -41,19 +49,26 @@
     list-style: none;
 }
 
+i {
+    opacity: .5;
+    @include m.icons(v.$melon)
+}
+
 /************************************************/
 
 .product {
-    width: 30rem;
+    width: 24rem;
     padding: 2rem;
     @include m.bg-color(v.$gray);
+    @include m.flex(space-between, true, .5rem);
 
     h3 {
-        font-size: 3rem;
+        font-size: 2rem;
         @include m.title(v.$melon, center, 1.5rem, italic);
     }
 
     p {
+        margin: .5rem 0;
         text-align: center;
     }
 
@@ -61,8 +76,20 @@
         width: 100%;
     }
 
+    b {
+        color: v.$melon;
+        font-size: 1.2em;
+    }
+
+    .btn {
+        margin: 0;
+    }
+
     .shop {
-        margin-top: .5rem;
-        @include m.btn(white, v.$cream, false);
+        @include m.btn(white, v.$cafe, false);
+
+        &:hover{
+            background-color: v.$orange;
+        }
     }
 }
