--- a/src/app/modules/home/page/home.component.scss
+++ b/src/app/modules/home/page/home.component.scss
@@ -4,7 +4,7 @@
 #nosotros {
 
     h2 {
-        @include m.title(v.$oscuro, center, 2rem, italic);
+        @include m.title(v.$orange, center, 2rem, italic);
     }
 
     picture {
@@ -46,8 +46,5 @@
             @include m.box(90rem);
         }
     }
-
-
-
 
 }
