--- a/src/app/components/carrusel/carrusel.component.scss
+++ b/src/app/components/carrusel/carrusel.component.scss
@@ -4,18 +4,17 @@
 .carrusel {
     overflow: hidden;
     position: relative;
-    @include m.box(120rem);
-    @include m.padding(4rem, 0);
+   // @include m.box(120rem);
+   // @include m.padding(4rem, 0rem);
 
-    width: 90%;
+    //width: 90%;
 }
 
 .carrusel-track {
     top: 0;
     left: 0;
-    float: left;
     position: relative;
-    @include m.flex(flex-start);
+    @include m.flex(flex-start, false, 0);
     transition: all 1s ease-in-out;
 }
 
@@ -57,8 +56,10 @@ i {
 /************************************************/
 
 .product {
-    width: 24rem;
+    flex:0 0 25%;
     padding: 2rem;
+    border: 1px solid #e1e1e1;
+   // margin: 0 .5rem;
     @include m.bg-color(v.$gray);
     @include m.flex(space-between, true, .5rem);
 
