--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div id="middle" class="row">
-        <div class="contain grid areas lap">
+        <div class="contain grid areas tablet">
 
             <div class="area1">
                 <a href=""><i class="logo fa-solid fa-shop fa-beat"></i></a>
