--- a/src/app/modules/home/page/home.component.scss
+++ b/src/app/modules/home/page/home.component.scss
@@ -11,7 +11,7 @@
         grid-area: 2/ span 1;
         @include m.flex(center, true);
 
-        @include m.lap() {
+        @include m.tablet() {
             grid-area: 1/ span 1;
         }
     }
@@ -36,7 +36,7 @@
     }
 
 
-    @include m.lap {
+    @include m.tablet {
 
         h2 {
             font-size: 5rem;
