--- a/src/app/modules/home/page/home.component.html
+++ b/src/app/modules/home/page/home.component.html
@@ -59,5 +59,6 @@
 <section id="testimonios" class="">
     <div class="contain">
         <h2>Testimonios</h2>
+        <app-testimonios></app-testimonios>
     </div>
 </section>
