--- a/src/app/modules/home/page/home.component.scss
+++ b/src/app/modules/home/page/home.component.scss
@@ -16,7 +16,7 @@
         }
     }
 
-    
+
 }
 
 #banner {
@@ -47,4 +47,8 @@
         }
     }
 
+}
+
+#testimonios {
+    padding-bottom: 6rem;
 }
