--- a/src/app/modules/tienda/page/tienda.component.html
+++ b/src/app/modules/tienda/page/tienda.component.html
@@ -1,1 +1,16 @@
-<p>tienda works!</p>
+<section id="hero">
+    <div class="contain">
+        <h1>Tienda</h1>
+    </div>
+</section>
+
+<main class="grid contain">
+
+    <aside>
+
+    </aside>
+
+    <section class="grid column3">
+
+    </section>
+</main>
