--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -1,4 +1,3 @@
-
 @use '../../../assets/sass/variables'as v;
 @use '../../../assets/sass/mixins'as m;
 
@@ -30,4 +29,34 @@ i {
             cursor: pointer;
         }
     }
+}
+
+.box {
+    width: 46rem;
+    z-index: 500;
+    max-height: 30rem;
+    overflow-y: scroll;
+    position: absolute;
+    background-color: white;
+}
+
+.list {
+    padding: 1rem;
+    cursor: pointer;
+    @include m.flex(flex-start);
+    align-items: center;
+
+    &:hover {
+        background-color: #f6f6f6;
+    }
+
+    h4,
+    p {
+        margin: 0;
+    }
+
+    img {
+        max-width: 8rem;
+    }
+
 }
