--- a/src/app/modules/nosotros/page/nosotros.component.html
+++ b/src/app/modules/nosotros/page/nosotros.component.html
@@ -1,6 +1,44 @@
+<section id="hero" class="padding">
+    <div class="contain flex">
+        <div class="box">
+        <h1>Somos ClothyShop</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem autem ea consequatur odit animi iure.
+            Consequatur esse doloremque soluta? Quae necessitatibus minus suscipit ea debitis eveniet minima vel
+            blanditiis quis!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dolorum reiciendis distinctio unde ex, debitis libero quisquam vel maiores corporis optio numquam, perferendis minima inventore, necessitatibus facere ducimus voluptatibus itaque?
+        </p>
+    </div>
+    </div>
+</section>
+
+
 <main class="padding">
     <div class="contain">
-        <h1>Somos ClothyShop</h1>
-        <blockquote>La moda que nadie puede resistir</blockquote>
+
+
+        <section id="acerca">
+            <div class="grid column2">
+                <picture>
+                    <img src="../../../../assets/img/acerca.jpg" alt="acerca de">
+                </picture>
+                <div class="flex center">
+                    <div class="text">
+                        <h2>Acerca De</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quasi molestiae dolore ipsum
+                            mollitia
+                            quae, quod reprehenderit aliquid praesentium at iste nesciunt dolor id eligendi aut earum
+                            sequi
+                            veritatis perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quasi molestiae dolore ipsum
+                            mollitia
+                            quae, quod reprehenderit aliquid praesentium at iste nesciunt dolor id eligendi aut earum
+                            sequi
+                            veritatis perspiciatis.</p>
+                        <blockquote>"La moda que nadie puede resistir"</blockquote>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
 </main>
