--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -17,12 +17,12 @@
 
             <div class="flex">
                 <i class="fa-solid fa-brands fa-instagram"></i>
-                <a href="">@LaCalacaFina</a>
+                <a href="">@ClothyShop</a>
 
             </div>
             <div class="flex">
                 <i class="fa-solid fa-brands fa-youtube"></i>
-                <a href="">/calacafina</a>
+                <a href="">/ClothyShop</a>
             </div>
 
         </div>
